Bug 503959 - kactivitymanagerd crashes on launch with 5bf1cd00d1ca51583fa099495b8b2e8ffa9eddf1
Summary: kactivitymanagerd crashes on launch with 5bf1cd00d1ca51583fa099495b8b2e8ffa9e...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Activities in general (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: HI crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-05-09 13:56 UTC by Nate Graham
Modified: 2025-05-09 16:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-05-09 13:56:34 UTC
With 5bf1cd00d1ca51583fa099495b8b2e8ffa9eddf1 in the kactivitymanagerd repo, kactivitymanagerd crashes on launch 100% of the time for me now.

Backtrace:


Thread 1 (Thread 0x7f6f7f6069c0 (LWP 80594)):
[KCrash Handler]
#4  0x00007f6f817866e6 in QAction::QAction (this=0x1d3ef380, parent=0x1d3ef100) at /usr/src/debug/qt6-qtbase-6.9.0-2.fc42.x86_64/src/gui/kernel/qaction.cpp:231
#5  0x00007f6f5fdaece0 in KActionCollection::addAction (this=0x1d3ef100, name=..., receiver=0x0, member=0x0) at /home/nate/kde/src/kxmlgui/src/kactioncollection.cpp:459
#6  0x00007f6f7ec7ad51 in GlobalShortcutsPlugin::activityAdded (this=0x1d3b9250, activity=...) at /home/nate/kde/src/kactivitymanagerd/src/service/plugins/globalshortcuts/GlobalShortcutsPlugin.cpp:67
#7  GlobalShortcutsPlugin::activityAdded (this=0x1d3b9250, activity=...) at /home/nate/kde/src/kactivitymanagerd/src/service/plugins/globalshortcuts/GlobalShortcutsPlugin.cpp:57
#8  0x00007f6f7ec7bf1f in GlobalShortcutsPlugin::init (this=0x1d3b9250, modules=...) at /home/nate/kde/src/kactivitymanagerd/src/service/plugins/globalshortcuts/GlobalShortcutsPlugin.cpp:45
#9  0x0000000000401c23 in Application::Private::loadPlugin (this=0x1d366c10, plugin=...) at /home/nate/kde/src/kactivitymanagerd/src/service/Application.cpp:152
#10 0x00000000004020c1 in Application::loadPlugins (this=0x7ffe0ca78460) at /home/nate/kde/src/kactivitymanagerd/src/service/Application.cpp:176
#11 0x00007f6f80950fec in QObject::event (this=<optimized out>, e=<optimized out>) at /usr/src/debug/qt6-qtbase-6.9.0-2.fc42.x86_64/src/corelib/kernel/qobject.cpp:1431
#12 0x00007f6f808f5fa8 in QCoreApplication::notifyInternal2 (receiver=0x7ffe0ca78460, event=0x1d3a3040) at /usr/src/debug/qt6-qtbase-6.9.0-2.fc42.x86_64/src/corelib/kernel/qcoreapplication.cpp:1106
#13 0x00007f6f808f620d in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>) at /usr/src/debug/qt6-qtbase-6.9.0-2.fc42.x86_64/src/corelib/kernel/qcoreapplication.cpp:1546
#14 0x00007f6f808f9cd6 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x1d362440) at /usr/src/debug/qt6-qtbase-6.9.0-2.fc42.x86_64/src/corelib/kernel/qcoreapplication.cpp:1879
#15 0x00007f6f80bffd2f in postEventSourceDispatch (s=0x1d3664c0) at /usr/src/debug/qt6-qtbase-6.9.0-2.fc42.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:246
#16 0x00007f6f7ffb4040 in g_main_dispatch (context=0x1d366280) at ../glib/gmain.c:3398
#17 g_main_context_dispatch_unlocked (context=0x1d366280) at ../glib/gmain.c:4249
#18 0x00007f6f7ffbd128 in g_main_context_iterate_unlocked (context=context@entry=0x1d366280, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4314
#19 0x00007f6f7ffbd2d3 in g_main_context_iteration (context=0x1d366280, may_block=1) at ../glib/gmain.c:4379
#20 0x00007f6f80bff56d in QEventDispatcherGlib::processEvents (this=0x1d366220, flags=...) at /usr/src/debug/qt6-qtbase-6.9.0-2.fc42.x86_64/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#21 0x00007f6f80903783 in QEventLoop::exec (this=this@entry=0x7ffe0ca783e0, flags=..., flags@entry=...) at /usr/src/debug/qt6-qtbase-6.9.0-2.fc42.x86_64/src/corelib/global/qflags.h:77
#22 0x00007f6f808ff229 in QCoreApplication::exec () at /usr/src/debug/qt6-qtbase-6.9.0-2.fc42.x86_64/src/corelib/kernel/qcoreapplication.cpp:1449
#23 0x0000000000401473 in main (argc=<optimized out>, argv=0x7ffe0ca78628) at /home/nate/kde/src/kactivitymanagerd/src/service/Application.cpp:262
Comment 1 Bug Janitor Service 2025-05-09 16:28:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kactivitymanagerd/-/merge_requests/82
Comment 2 Fushan Wen 2025-05-09 16:56:15 UTC
Git commit ffb975b08c35883716370ed56a66b6ccc6d1cc39 by Fushan Wen.
Committed on 09/05/2025 at 16:26.
Pushed by ngraham into branch 'master'.

Application: fix crash on launch

QAction needs at least QGuiApplication.

M  +2    -2    src/service/Application.cpp
M  +2    -2    src/service/Application.h

https://invent.kde.org/plasma/kactivitymanagerd/-/commit/ffb975b08c35883716370ed56a66b6ccc6d1cc39