Application: fix crash on launch

QAction needs at least QGuiApplication.

BUG: 503959